--- a/Sjuklöner/Views/Shared/_Layout.cshtml
+++ b/Sjuklöner/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                     <ul style="padding-left: 4px;">
                         <li>@Html.ActionLink("Ansökningar", "Index", "Claims", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
                         <li>@Html.ActionLink("Kollektivavtal", "Index", "CollectiveAgreements", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
+                        <li>@Html.ActionLink("Handläggare", "NewAdmOff", "Account", null, new { @class = "navbar-actionlink li-a-no-padding-left" })</li>
                     </ul>
                     @Html.Partial("_LoginPartial")
                 </div>
